--- a/UI/css/generalstyles.css
+++ b/UI/css/generalstyles.css
@@ -1,67 +1,184 @@
+/* these are styles designed to siplify development in html by giving one classes that make it easy to position elements in the dom*/
+
+
+/* full view port class */
+
 .view {
     width: 100vw;
     height: 100vh;
     margin: 0;
 }
 
-.w-50 {
+
+/* color helper classes */
+
+.kool-primary-background {
+    background-color: #d2691e;
+}
+
+.kool-primary-color {
+    color: #d2691e;
+}
+
+.kool-accent-background {
+    background-color: #ffffff;
+}
+
+.kool-accent-color {
+    color: #ffffff;
+}
+
+.kool-secondary-background {
+    background-color: wheat;
+}
+
+.kool-secondary-color {
+    color: wheat;
+}
+
+.kool-black-background {
+    background-color: #7c3706;
+}
+
+.kool-black-color {
+    color: #000000;
+}
+
+.kool-white-background {
+    background-color: #ffffff;
+}
+
+.kool-white-color {
+    color: #ffffff;
+}
+
+
+/* percentage width helper */
+
+.kool-w-100 {
+    width: 100%;
+}
+
+.kool-w-80 {
+    width: 80%;
+}
+
+.kool-w-75 {
+    width: 75%;
+}
+
+.kool-w-60 {
+    width: 60%;
+}
+
+.kool-w-50 {
     width: 50%;
-    font-style: italic;
 }
 
-.w-20 {
-    width: 20%;
+.kool-w-30 {
+    width: 30%;
 }
 
-.items-row {
-    flex-direction: row;
+.kool-w-25 {
+    width: 25%;
 }
 
-.p-1 {
-    padding: 2em 4em;
+.kool-w-10 {
+    width: 10%;
 }
 
-.items-column {
-    flex-direction: column;
-    padding: 0.5em;
-    border-radius: 0.8em;
-    margin: 10px auto;
+
+/* percentage height helper */
+
+.kool-h-100 {
+    height: 100%;
 }
 
-.kool-input {
-    padding: 1em 3em;
+.kool-h-80 {
+    height: 80%;
 }
 
-.back {
-    background: url('../assets/diary.svg'), no-repeat;
-    background-size: cover;
+.kool-h-75 {
+    height: 75%;
 }
 
-.center-children-in-parent {
+.kool-h-50 {
+    height: 50%;
+}
+
+.kool-h-25 {
+    height: 25%;
+}
+
+.kool-h-10 {
+    height: 10%;
+}
+
+
+/* positoning  */
+
+.kool-position-relative {
+    position: relative;
+}
+
+.kool-position-absolute {
+    position: absolute;
+}
+
+
+/* flex box helper classes */
+
+.kool-display-flex {
     display: flex;
     width: 100%;
     height: 100%;
+}
+
+.kool-flex-center {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.tittle {
-    font-weight: bold;
-    font-size: 9em;
-    margin: 0;
+.kool-flex-center-hor {
+    display: flex;
+    justify-content: center;
 }
 
-.sub-tittle {
-    font-weight: bold;
-    font-size: 4em;
-    margin: 0;
-    color: white;
+.kool-flex-center-vert {
+    display: flex;
+    align-items: center;
 }
 
-.kool-hidden {
-    display: none;
+.kool-flex-nowrap {
+    display: flex;
+    flex-wrap: nowrap
 }
+
+.kool-flex-wrap {
+    display: flex;
+    flex-wrap: wrap
+}
+
+.kool-flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.kool-flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+
+/*  pointer */
+
+.kool-pointer {
+    cursor: pointer;
+}
+
+
+/* button class */
 
 .kool-button {
     border-radius: 6px;
@@ -76,14 +193,83 @@
     cursor: pointer;
 }
 
+
+/* input view class */
+
+.kool-input {
+    padding: 1em 3em;
+    margin: 0.6em 4em;
+}
+
+
+/* svg background  */
+
+.back {
+    background: url('../assets/diary.svg'), no-repeat;
+    background-size: cover;
+}
+
+
+/* title size */
+
+.tittle {
+    font-weight: bold;
+    font-size: 9em;
+    margin: 0;
+}
+
+.sub-tittle {
+    font-weight: bold;
+    font-size: 4em;
+    margin: 0;
+    color: white;
+}
+
+
+/* hide and shoe helper classes */
+
+.kool-hidden {
+    display: none;
+}
+
 .kool-show {
     display: flex;
 }
+
+
+/* center element vertically */
 
 .kool-center-verticle {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+}
+
+
+/* center element vertically */
+
+.kool-center-horizontal {
+    position: relative;
+    margin: 0 auto;
+}
+
+
+/* center element in a parent */
+
+.kool-center-vert-hor {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0 auto;
+}
+
+
+/* fit element in a parent */
+
+.kool-fit-parent {
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .kool-overlay {
@@ -94,13 +280,11 @@
     right: 0;
 }
 
-.kool-fit-parent {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-}
-
 .kool-cover {
     opacity: 0.7;
     background: black;
+}
+
+.kool-text-center {
+    text-align: center;
 }
