change styles logout button profile view

--- a/UI/css/generalstyles.css
+++ b/UI/css/generalstyles.css
@@ -13,6 +13,12 @@ body {
     overflow: hidden;
 }
 
+.kool-right-top {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+
 
 /* color helper classes */
 
