--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -5,14 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My Diary</title>
+    <link rel="stylesheet" href="static/css/generalstyles.css">
+    <link rel="stylesheet" href="static/css/specific.css">
+    <base href="./" />
 </head>
 
-<body>
+<body class="view">
+    <!-- gives body a background-->
+    <div class="kool-fit-parent  kool-primary-background"></div>
+    <!-- adds svg image to body -->
+    <div class="kool-fit-parent back "> </div>
+    <div class="kool-fit-parent kool-flex-center kool-flex-column">
+        <h1 class="kool-text-size-4">My Diary</h1>
+        <a class="kool-button kool-text-size-2 kool-h-10 kool-text-center kool-flex-center" href="./api/spec.html#!/spec">API Documentation</a>
+        <a class="kool-button kool-p-2" href="https://sokopaulsokool.github.io/MyDiary/UI ">User interface</a>
+    </div>
 
-    <h4>Sokool</h4>
-    <a href="./api/spec.html">Documentation</a>
-    <a href="https://sokopaulsokool.github.io/MyDiary/UI ">User interface</a>
 </body>
 
 </html>
